new proj/src/objects/GE_MDM_Subscription_Web_Service_Inputs__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>The Subscription Web Service sends several values that vary per GE business unit.  Please enter the values you would like sent for the &quot;Business Unit&quot;, &quot;Tier 1&quot;, &quot;Tier 2&quot;, &quot;Tier 3&quot;, and SSO ID (field&apos;s API name).  Examples are listed below.

Business Unit = &apos;Energy Management&apos;.
Tier 1 = &quot;Energy Management&quot;.
Tier 2 = &quot;Digital Energy&quot;.
Tier 3 = &quot;Advanced Sensors&quot;.
SSO ID API Name = &quot;SSO_ID__c&quot;.</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <inlineHelpText>Enter the Business Unit value you would like to be sent with the Subscription call.</inlineHelpText>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_System__c</fullName>
        <description>Enter the Legacy System value you would like sent with your Subscription request.  i.e. Energy Management = &quot;EMSFDC&quot; and Oil &amp; Gas = &quot;OGSFDC&quot;.  This Legacy System value can be viewed once you click on the View Subscription link, which displays when you are searching for MDM Customers from within the custom MDM Account search.</description>
        <inlineHelpText>Enter the Legacy System value you would like sent with your Subscription request.  i.e. Energy Management = &quot;EMSFDC&quot; and Oil &amp; Gas = &quot;OGSFDC&quot;.</inlineHelpText>
        <label>Legacy System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSO_ID_API_Name__c</fullName>
        <description>Enter the API name of the SSO ID field, which is located on the User object.  For example, it could be SSO_ID__c.</description>
        <inlineHelpText>Enter the API name of the SSO ID field, which is located on the User object.  For example, it could be SSO_ID__c.</inlineHelpText>
        <label>SSO ID API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_1__c</fullName>
        <inlineHelpText>Enter the Tier 1 value you would like to be sent with the Subscription call.</inlineHelpText>
        <label>Tier 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_2__c</fullName>
        <inlineHelpText>Enter the Tier 2 value you would like to be sent with the Subscription call.</inlineHelpText>
        <label>Tier 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_3__c</fullName>
        <inlineHelpText>Enter the Tier 3 value you would like to be sent with the Subscription call.</inlineHelpText>
        <label>Tier 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GE MDM - Subscription Web Service Inputs</label>
</CustomObject>